# dagger

./: .coveragerc  .gitignore  Jenkinsfile  README.md  conftest.py  setup.cfg  setup.py  tox.ini
samples/: boston_housing_run.py  boston_housing_transformations.py
src/dagger/: __init__.py  __main__.py  cli.py  dag.py  executor.py  graph.py  node.py
src/dagger/generator/: importer.py
src/dagger/utils/: importer.py  inspector.py  type_checker.py
tests/fixtures/: data.py  functions.py  transform_script.py
tests/integration/: test_dag_executor.py
tests/unit/: test_dag.py  test_initial_batch.py  test_node.py
tests/unit/utils/: test_importer.py
