[metadata]
name = dagger
version = 0.0.1
author = Charles Zou
author-email = czou1107@gmail.com
description = Convert transformation scripts on tabular data to reproducible DAGs

[options]
install_requires =
    fire
    networkx
    numpy
    pandas
python_requires = >=3.8
tests_require =
    pytest
package_dir =
    =src
packages = find:

[options.extras_require]
dev =
    matplotlib

[options.packages.find]
where = src


[options.entry_points]
console_scripts =
    dagger = dagger.dag:main