[metadata]
name = dagger
version = 0.0.1
author = Charles Zou
author-email = czou1107@gmail.com
description = Convert transformation scripts on tabular data to reproducible DAGs

[options]
install_requires =
    fire
    networkx
    numpy
    pandas
python_requires = >=3.8
# tests_require is used by python setup.py test
# To use it with pytest, would instead use extras_requires!
tests_require =
    coverage
    pytest
package_dir =
    =src
packages = find:

[options.extras_require]
dev =
    coverage
    matplotlib
    pytest
    scikit-learn

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dagger = dagger.__main__:main